admin can click on a single shift to see details without clicking assign/unassign first and fixed a bug where the hover message wouldn't follow the scroll position

--- a/client/components/admin-shifts-display.css
+++ b/client/components/admin-shifts-display.css
@@ -161,7 +161,6 @@
     background-color: rgb(0, 140, 0);
 }
 .alertShift {
-    /* background-color: lightpink; */
     background: repeating-linear-gradient(
         45deg,
         lightpink,
@@ -196,6 +195,7 @@
   background-color: lightblue;
   padding: 5px;
   box-shadow:0 1px 8px rgba(0,0,0,0.5);
+  z-index: 10;
 }
 .hoverMessage i::after {
   content:'';
@@ -238,7 +238,7 @@
         transparent 1px,
         transparent 100px);
 }
-.adminHoursRow {
+.adminHoursRow, .shiftDetailsHeader, .availableOperatorsHeader{
     height: 30px;
 }
 .availableOperator, .adminShiftDetails{
@@ -256,7 +256,7 @@
     height: auto;
     max-height: fit-content;
 }
-.adminShiftAngleTimeContainer, .availableOperatorIconNameContainer{
+.adminShiftAngleTimeContainer, .availableOperatorIconNameContainer, .dayOfWeekContainer{
     cursor: pointer;
 }
 .angleIcon{
@@ -264,6 +264,9 @@
 }
 .angleIconRotate{
     transform: rotate(90deg);
+}
+.adminShiftWeekContainer{
+    height: 100px;
 }
 .dayOfWeekContainer {
     width: 120px;
